--- a/07_Compost_Maturity/t.test.Rmd
+++ b/07_Compost_Maturity/t.test.Rmd
@@ -16,17 +16,26 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r cars}
-immature = c()
-mature - c()
-
+NH3_immature <- c()
+NH3_mature <- c()
+CO2_immature <- c()
+CO2_mature <- c()
 ```
 
 ## t.test()
 
 You can also embed plots, for example:
 
+### Free Ammmonia
+
 ```{r ttest, echo=FALSE}
-t.test(immature, mature)
+t.test(NH3_immature, NH3_mature)
+```
+
+### Carbon Dioxide Respiration
+
+```{r ttest, echo=FALSE}
+t.test(CO2_immature, CO2_mature)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
